force-app/main/default/objects/OA_Knowledge_Relationship__c/OA_Knowledge_Relationship__c.object-meta.xml
<CustomObject>
    <description>Knowledge graph edge (Program 021): a typed, directional relationship between two Company Profiles (partner/prime/sub/customer/teaming), optionally in the context of an Opportunity. Reuses standard lookups — no new graph technology. Lets the platform understand who relates to whom.</description>
    <label>Knowledge Relationship</label>
    <nameField>
        <displayFormat>KR-{0000000}</displayFormat>
        <label>Relationship #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>