force-app/main/default/objects/OA_Knowledge_Relationship__c/fields/From_Company__c.field-meta.xml
<CustomField>
    <fullName>From_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Company</label>
    <referenceTo>OA_Company_Profile__c</referenceTo>
    <relationshipLabel>Relationships (From)</relationshipLabel>
    <relationshipName>Relationships_From</relationshipName>
    <type>Lookup</type>
</CustomField>