force-app/main/default/objects/OA_Knowledge_Relationship__c/fields/Notes__c.field-meta.xml
<CustomField><fullName>Notes__c</fullName><label>Notes</label><type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines></CustomField>