force-app/main/default/objects/OA_Knowledge_Relationship__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Knowledge Relationships</relationshipLabel>
    <relationshipName>Knowledge_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>