force-app/main/default/objects/OA_Knowledge_Relationship__c/fields/Strength__c.field-meta.xml
<CustomField><fullName>Strength__c</fullName><label>Strength</label><type>Number</type><precision>5</precision><scale>1</scale></CustomField>