force-app/main/default/objects/OA_Knowledge_Relationship__c/fields/To_Company__c.field-meta.xml
<CustomField><fullName>To_Company__c</fullName><label>To Company</label><type>Lookup</type><referenceTo>OA_Company_Profile__c</referenceTo><relationshipLabel>Relationships (To)</relationshipLabel><relationshipName>Relationships_To</relationshipName><deleteConstraint>SetNull</deleteConstraint></CustomField>